fix(pom): trying to fix UI tests on CI