@@ -45,7 +45,6 @@
                     <source>${java.version}</source>
                     <target>${java.version}</target>
                     <release>${java.version}</release>
-                    <encoding>UTF-8</encoding>
                 </configuration>
             </plugin>
 
@@ -54,7 +53,6 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.22.1</version>
                 <configuration>
-                    <rerunFailingTestsCount>2</rerunFailingTestsCount>
                     <argLine>-Xmx4000m
                         -Dglass.platform=Monocle
                         -Dheadless.geometry=1280x1024-32
@@ -65,6 +63,7 @@
                         --add-opens java.base/java.lang=ALL-UNNAMED
                         --add-opens javafx.graphics/com.sun.glass.ui=ALL-UNNAMED
                         --add-opens javafx.graphics/com.sun.glass.ui.delegate=ALL-UNNAMED
+                        --add-opens javafx.graphics/com.sun.glass.utils=ALL-UNNAMED
                         --add-opens javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
                         --add-opens malai.core/org.malai.undo=ALL-UNNAMED
                         --add-opens malai.core/org.malai.command=ALL-UNNAMED
@@ -117,12 +116,6 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>org.testfx</groupId>
-            <artifactId>openjfx-monocle</artifactId>
-            <version>jdk-11+26</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
             <groupId>org.mockito</groupId>
             <version>2.23.0</version>
             <artifactId>mockito-core</artifactId>
@@ -158,6 +151,12 @@
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-swing</artifactId>
             <version>${jfx.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.testfx</groupId>
+            <artifactId>openjfx-monocle</artifactId>
+            <version>jdk-11+26</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
